Set footer background to prevent overlap artifacts

--- a/front/src/app/scss/blocks/_footer.scss
+++ b/front/src/app/scss/blocks/_footer.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   z-index: 5;
   padding-top: 28px;
+  background: var(--body-bg);
 
   &.mode {
     @include mobile {
